# SimpleAgentWithMCP

./: .gitignore  GEMINI_GUIDE.md  GETTING_STARTED.md  INTERACTIVE_DEMO.md  LLM_AGENT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_AGENTS.md  compare_agents.py  list_gemini_models.py  main.py  main_gemini.py  main_llm.py  pyproject.toml  test_interactive.py
SimpleAgentWithMCP/: GETTING_STARTED.md  QUICKSTART.md  README.md  main.py  pyproject.toml
SimpleAgentWithMCP/src/: __init__.py  agent.py  mcp_client.py  mcp_server.py  models.py  tools.py
config/: agent_config.yaml  tools_config.yaml
docs/: CONCEPTS.md  MCP_ARCHITECTURE.md  TROUBLESHOOTING.md
examples/: advanced_custom_tool.py  custom_tool_template.py  moderate_custom_tool.py  simple_custom_tool.py
src/: __init__.py  agent.py  config.py  gemini_agent.py  llm_agent.py  logging_setup.py  mcp_client.py  mcp_server.py  models.py  tools.py
workspace/: result.txt
